--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "sample",
+  "name": "Country application",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.1",
     "react-router": "^3.0.5",
-    "react-scripts": "2.1.8",
-    "redux": "^4.0.1"
+    "react-scripts": "2.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,8 +25,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "redux-devtools": "^3.5.0",
-    "redux-devtools-dock-monitor": "^1.1.3",
-    "redux-devtools-log-monitor": "^1.4.0"
+    "bootstrap": "^4.3.1"
   }
 }
