--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
-  "name": "Country application",
+  "name": "app",
   "version": "0.1.0",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.1",
     "react-router": "^3.0.5",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": [
     ">0.2%",
@@ -25,6 +27,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "bootstrap": "^4.3.1"
+    "redux-devtools": "^3.5.0",
+    "redux-devtools-dock-monitor": "^1.1.3",
+    "redux-devtools-log-monitor": "^1.4.0"
   }
 }
